completed verify card of task 1:

--- a/challengeproducer/src/main/resources/application.properties
+++ b/challengeproducer/src/main/resources/application.properties
@@ -1,1 +1,19 @@
-
+#App
+spring.application.name=challengeproducer
+spring.main.banner-mode=off
+spring.jackson.default-property-inclusion=NON_NULL
+#Db
+spring.datasource.url=jdbc:h2:mem:challengedb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.enabled=true
+#BinList
+challenge.binlist.url=https://lookup.binlist.net/
+#Kafka
+challenge.queue.topic=com.ng.vela.even.card_verified
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.groupId=test
+spring.kafka.producer.bootstrap-servers=localhost:9092
