--- a/challengeconsumer/src/main/resources/application.properties
+++ b/challengeconsumer/src/main/resources/application.properties
@@ -1,1 +1,11 @@
-
+spring.application.name=challengeconsumer
+spring.main.banner-mode=off
+server.port=8081
+challenge.queue.topic=com.ng.vela.even.card_verified
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.groupId=test
+spring.kafka.consumer.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=test
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
