configured swagger2 as ui and mini api doc for the challeneg. added a few test also

--- a/challengeproducer/src/main/resources/application.properties
+++ b/challengeproducer/src/main/resources/application.properties
@@ -9,6 +9,8 @@ challenge.queue.topic=com.ng.vela.even.card_verified
 spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.groupId=test
 spring.kafka.producer.bootstrap-servers=localhost:9092
+#Swagger2
+SWAGGER_PACKAGE_CONFIG =com.kleffy.mintbank.challengeproducer.controller.cardscheme
 #Db
 #spring.datasource.url=jdbc:h2:mem:challengedb
 #spring.datasource.driverClassName=org.h2.Driver
